--- a/css/styles.css
+++ b/css/styles.css
@@ -58,4 +58,7 @@ flex-shrink: 0;
 
 .section-3 {background-color:#F4F4FD; text-align: center;
 	}
-footer {background-color: #2E2F42;color: #F4F4FD;}
+footer {background-color: #2E2F42; }
+.ftr-link {color: #FFFFFF;}
+.acccent {color: #4D5AE5;}
+.p-ftr {color: #F4F4FD;}
