--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body{font-family: 'Roboto', sans-serif; background: #FFF;color:#2E2F42; }
+body{font-family: 'Roboto', sans-serif; background: #FFF;color:#434455; }
 .logo {font-family: 'Raleway', sans-serif;}
 a{text-decoration: none;}
 ul {list-style-type: none;}
