--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ flex-shrink: 0;
 .section-3 {background-color:#F4F4FD; text-align: center;
 	}
 footer {background-color: #2E2F42; }
-.ftr-link {color: #FFFFFF;}
+/* .ftr-link {color: #FFFFFF;} */
 .acccent {color: #4D5AE5;}
+.Studio{#f4f4fd}
 .p-ftr {color: #F4F4FD;}
