--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,8 @@ h3{font-size: 20px;
 	font-style: normal;
 	font-weight: 500;
 	line-height: 1.2; 
-	letter-spacing: 0.4px;}
+	letter-spacing: 0.4px;
+	color: #2e2f42}
 p{color:  #434455;
 	font-size: 16px;
 	line-height: 1.5; 
@@ -40,7 +41,7 @@ flex-shrink: 0;
 }
 
 .button{cursor: pointer;
-	background-color: #9747FF; 
+	background-color: #4D5AE5; 
 	color: #FFFFFF;
 	box-shadow: 0px 4px 4px 0px #00000026;
 	border-radius: 4px;
@@ -50,11 +51,14 @@ flex-shrink: 0;
 	padding: 16px 32px;
 	align-items: flex-start;
 	gap: 10px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
 ;}
 
 .button:hover, .button:focus{background-color: #404BBF; 
 	}
-.section-2 h2{color: #FFFFFF;}
+.sec2_h{color: #FFFFFF;}
 
 .section-3 {background-color:#F4F4FD; text-align: center;
 	}
