--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ p{color:  #434455;
 	font-size: 16px;
 	line-height: 1.5; 
 	letter-spacing: 0.32px;}
-/* .link {color:#2E2F42;} */
+ .link {color:#2E2F42;} 
 .link:hover, .link:focus{color:#404BBF;}
 .link:active{color:#404BBF;}
 
