--- a/css/styles.css
+++ b/css/styles.css
@@ -90,5 +90,5 @@ flex-shrink: 0;
 footer {background-color: #2E2F42; }
 /* .ftr-link {color: #FFFFFF;} */
 
-.Studio{color:#f4f4fd;}
+.studio{color:#f4f4fd;}
 .p-ftr {color: #F4F4FD;}
