--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,9 @@ address{font-style: normal;}
 .adrs:hover, .adrs:focus{color:#404BBF;}
 
  .section-one {background-color:#2E2F42;
-	width: 1440px;
+	/* width: 1440px;
 height: 600px;
-flex-shrink: 0;
+flex-shrink: 0; */
 }
 
 .button{cursor: pointer;
